<resources>
    <string name="app_name">HelloAndroidPADC</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_click_me">Click Me!</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Login-->
    <string name="btn_login">Login</string>
    <string name="btn_forgot_password"><i><u>Forgot Password?</u></i></string>
    <string name="btn_new_seller_register"><i><u>New User? Register</u></i></string>
    <string name="lbl_password">Password</string>

    <string name="lbl_email_or_phone">Email or Phone</string>
    <string name="title_activity_register">Register</string>

    <!--Register-->
    <string name="lbl_email">Email</string>
    <string name="lbl_phone">Phone Number</string>
    <string name="lbl_name">User Name</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="btn_register">Register</string>
    <string name="rd_male">Male</string>
    <string name="rd_female">Female</string>
    <string name="lbl_address">Address</string>
    <string name="cb_at_home">I\'m at my home</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_already_have_account">Already Have Account?</string>

</resources>
